--- a/earthquakelist/index.html
+++ b/earthquakelist/index.html
@@ -136,6 +136,11 @@
 
     
 
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v22.0"></script>
+
+    <br>
+
     <div class="fb-comments" data-href="https://dpnote.netlify.app/earthquakelist/" data-width="100%" data-numposts="5"></div>
 
     <ol itemscope itemtype="https://schema.org/BreadcrumbList" class="breadcrumb">
@@ -188,7 +193,7 @@
               <img src='https://dpnote.netlify.app/images/post/nigata2004.jpg'>
           </a>
 
-        <a href="/nigata2004/">新潟県中越地震の震度マップ</a>
+        <a href="/nigata2004/">新潟県中越地震の震度マップの可視化</a>
       </div>
     
       <div class="item1"><a href="/kumamoto_shido_animation/">
