--- a/simulation/kumamoto/visualization1.html
+++ b/simulation/kumamoto/visualization1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="ja">
-<title>熊本地震の震度マップ</title>
+<title>熊本地震の震度マップと活断層図の重ね合わせ</title>
 
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 	<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -56,12 +56,10 @@
 
 			
 			L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-				attribution: '&copy; <a href="http://osm.org/copyright" target="_blank">OpenStreetMap</a> contributors l &copy; <a href="https://www.data.jma.go.jp/svd/eqdb/data/shindo/index.html" target="_blank">気象庁 震度データベース検索</a>.'
+				attribution: '&copy; <a href="http://osm.org/copyright" target="_blank">OpenStreetMap</a> contributors l &copy; <a href="https://www.data.jma.go.jp/svd/eqdb/data/shindo/index.html" target="_blank">気象庁 震度データベース検索</a> l &copy; <a href="http://osm.org/copyright" target="_blank">地理院タイル</a>'
 			}).addTo(map);
 
-			L.tileLayer('https://cyberjapandata.gsi.go.jp/xyz/afm/{z}/{x}/{y}.png', {
-				attribution: '&copy; <a href="http://osm.org/copyright" target="_blank">地理院タイル</a>'
-			}).addTo(map);			
+			L.tileLayer('https://cyberjapandata.gsi.go.jp/xyz/afm/{z}/{x}/{y}.png').addTo(map);			
 			
 			/* 震度マップ追加 */
 			let shindo1 = L.geoJson(shindomap1, {
@@ -309,7 +307,6 @@
 			layer.bindPopup(popup);
 		}
 	</script>
-	<title>熊本地震の震度マップと活断層マップ重ね合わせ</title>
 
 </head>
 
