--- a/rokkaku/index.html
+++ b/rokkaku/index.html
@@ -171,7 +171,7 @@
     
     <div class="previous-post" id="pre_next">
 
-      <a class="link-reverse" href="/kumamotoearthquake/">熊本地震の震度マップ</a> <i class="fas fa-chevron-right"></i></a>
+      <a class="link-reverse" href="/kumamotoearthquake/">熊本地震の震度マップと活断層図の重ね合わせ</a> <i class="fas fa-chevron-right"></i></a>
     </div>
     
   </div>
