--- a/atami/index.html
+++ b/atami/index.html
@@ -165,7 +165,7 @@
           
 
      <div class="next-post" id="pre_next">
-      <a class="link-reverse" href="/net119/"><i class="fas fa-chevron-left"></i> Net119をご存じですか？</a>
+      <a class="link-reverse" href="/kumamotoearthquake/"><i class="fas fa-chevron-left"></i> 熊本地震の震度マップと活断層図の重ね合わせ</a>
     </div>
     
 
