--- a/earthquakelist/index.html
+++ b/earthquakelist/index.html
@@ -171,7 +171,7 @@
     
     <div class="previous-post" id="pre_next">
 
-      <a class="link-reverse" href="/population/">防災と少子高齢化、DXの役割</a> <i class="fas fa-chevron-right"></i></a>
+      <a class="link-reverse" href="/dam/">日本全国のダムの情報をマップ化しました。</a> <i class="fas fa-chevron-right"></i></a>
     </div>
     
   </div>
