--- a/kumamotoearthquake/index.html
+++ b/kumamotoearthquake/index.html
@@ -170,7 +170,7 @@
     
     <div class="previous-post" id="pre_next">
 
-      <a class="link-reverse" href="/net119/">Net119をご存じですか？</a> <i class="fas fa-chevron-right"></i></a>
+      <a class="link-reverse" href="/atami/">熱海市土砂災害をマップ化しました</a> <i class="fas fa-chevron-right"></i></a>
     </div>
     
   </div>
