--- a/dam/index.html
+++ b/dam/index.html
@@ -164,7 +164,7 @@
           
 
      <div class="next-post" id="pre_next">
-      <a class="link-reverse" href="/population/"><i class="fas fa-chevron-left"></i> 防災と少子高齢化、DXの役割</a>
+      <a class="link-reverse" href="/earthquakelist/"><i class="fas fa-chevron-left"></i> 1日の震源リストを可視化させてみる</a>
     </div>
     
 
