--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
   
   <link rel="stylesheet" type="text/css" href="https://dpnote.netlify.app/css/styles.07015b78eada1bea1b52fca88d93e547841340a0660500e57454e8c127831bab2a56a85e088a1ee7723ea931072ac15f3111f1fdc3fe9bdea3f3cca3f0f6b49e.css" integrity="sha512-BwFbeOraG&#43;obUvyojZPlR4QTQKBmBQDldFTowSeDG6sqVqheCIoe53I&#43;qTEHKsFfMRHx/cP&#43;m96j88yj8Pa0ng==" crossorigin="anonymous">
   
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MPP84V2NHB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+  
+      gtag('config', 'G-MPP84V2NHB');
+    </script>
+
 </head>
 
 
