--- a/about/index.html
+++ b/about/index.html
@@ -126,21 +126,24 @@
 
 
     
-    <p>DP Noteは、災害データを可視化するWEBサービスです。地図情報をメインとして、災害データを３Dマップや防災図解に可視化することで、統計的に得られる教訓や減災に活かせるのではないかと思い、日々、情報発信しています。</p>
+    <img src="./dpnote.jpg" width="100%">
+<p>DP Noteは、災害データを可視化するWEBサービスです。地図情報をメインとして、災害データを３Dマップや防災図解に可視化することで、統計的に得られる教訓や減災に活かせるのではないかと思い、日々、情報発信しています。</p>
 <h2 class="heading1">日本の災害の現状</h2>
+<img src="./road.jpg" width="100%">
 <p>日本で発生する災害は、地震、台風、津波、土砂災害、火山の噴火、大雪など、様々な災害が起きています。季節ごとに起きる災害が異なるなど、まさに【災害大国】と言っても過言ではないくらい、厳しい環境の中で生活をしていると思います。また、昨今では、ゲリラ豪雨や夏の猛暑なども起きており、防災が大切な時代になっていると改めて感じています。</p>
 <h2 class="heading1">災害に対する人々の認識</h2>
 <p>災害大国と言われる日本において、人々の災害に対する認識はどのようになっているでしょうか？【正常性バイアス】という言葉があります。予期せぬ出来事に対し正常心を保つための人の特性のことです。このバイアスがかかると、災害時に大丈夫と思い込み「避難行動を取らない」というリスクがあります。また、災害が起きた直後は防災に関する認知は上がりますが、時間の経過とともにその出来事のことは忘れられていき、防災は大切とわかっていても、なかなか取り組めなかったり、継続できなかったりするのが、現実だと思います。</p>
 <h2 class="heading1">どのように次世代に伝えていくべきなのか？</h2>
+<img src="./network.jpg" width="100%">
 <p>メディアなどでは、過去の災害を報道するにあたり、災害の映像を直に流すことがありますが、人により、精神的ショックを受けることもあり、そのような方々には心理面・精神面でのフォローも必要になってきます。災害の教訓を学ぶことは大切です。ただ、テレビ、新聞、ネットニュースなど、様々な媒体を通して、どのように次世代に伝えていくべきなのか？ずっと考えていました。</p>
 <h2 class="heading1">教育分野から考えてみる</h2>
+<img src="./student.jpg" width="100%">
 <p>教育分野の観点から災害を捉えてみます。子ども達のプログラミング教育が必修化され、小さい頃からパソコンやスマートフォンに触れる機会が多くなりました。最近のゲームなどのクオリティもとても高く、映像などに対し、目が肥えている学生の子たちが増えたように思います。今までと同じように、アナログな伝え方では足りないのではないか？そのように考えるようになりました。</p>
 <h2 class="heading1">DP Note誕生！</h2>
 <p>災害の教訓を伝えていく、そして、子ども達に防災について関心を持ってもらう、ここを掛け算して考えました。災害の映像ではなく、統計的に災害を捉えて教訓に活かすことができるのではないか？地図にしたり、グラフにしたり、図解にしたりするなど、様々な可視化をすることで、ビジュアル的に防災に関心を持たれる方々を増やせるのではないか？そのような思いから、DP Noteは誕生しました！</p>
 <p>このサービスと通して、防災に対する意識を高める人々が増えて、未来の災害の低減に繋がっていくことを願ってやみません。</p>
 <p>齋藤 仁志.</p>
-<p><br><br></p>
-
+<br>
 
 
 
