--- a/nishinihonrain/index.html
+++ b/nishinihonrain/index.html
@@ -169,7 +169,7 @@
     
     <div class="previous-post" id="pre_next">
 
-      <a class="link-reverse" href="/jirei1/">災害事例集「安否確認に１週間」</a> <i class="fas fa-chevron-right"></i></a>
+      <a class="link-reverse" href="/tonga/">トンガ火山噴火に伴う津波の様子</a> <i class="fas fa-chevron-right"></i></a>
     </div>
     
   </div>
