--- a/tonga/index.html
+++ b/tonga/index.html
@@ -164,7 +164,7 @@
           
 
      <div class="next-post" id="pre_next">
-      <a class="link-reverse" href="/jirei1/"><i class="fas fa-chevron-left"></i> 災害事例集「安否確認に１週間」</a>
+      <a class="link-reverse" href="/nishinihonrain/"><i class="fas fa-chevron-left"></i> 西日本集中豪雨を可視化しました</a>
     </div>
     
 
