--- a/calendar/index.html
+++ b/calendar/index.html
@@ -12,12 +12,11 @@
 
 <meta property="og:type" content="article">
 <meta name="description" content="本サービスで可視化している災害をカレンダー形式で掲載しています。
-2024年09月20日 能登半島豪雨
-2024年01月01日 能登半島地震
-2024年07月23日 令和6年7月東北地方の豪雨
-2022年08月03日 令和4年8月の大雨等による災害
-2011年03月11日 東日本大震災
-1997年01月17日 阪神淡路 …">
+・2024年09月20日 能登半島豪雨
+・2024年01月01日 能登半島地震
+・2024年07月23日 令和6年7月東北地方の豪雨
+・2022年08月03日 令和4年8月の大雨等による災害
+・2022年01月15 …">
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:creator" content="">
 <meta name="twitter:title" content="災害カレンダー" />
@@ -36,12 +35,11 @@
 <meta property="og:url" content="https://dpnote.netlify.app/calendar/" />
 <meta property="og:title" content="災害カレンダー" />
 <meta property="og:description" content="本サービスで可視化している災害をカレンダー形式で掲載しています。
-2024年09月20日 能登半島豪雨
-2024年01月01日 能登半島地震
-2024年07月23日 令和6年7月東北地方の豪雨
-2022年08月03日 令和4年8月の大雨等による災害
-2011年03月11日 東日本大震災
-1997年01月17日 阪神淡路 …" />
+・2024年09月20日 能登半島豪雨
+・2024年01月01日 能登半島地震
+・2024年07月23日 令和6年7月東北地方の豪雨
+・2022年08月03日 令和4年8月の大雨等による災害
+・2022年01月15 …" />
 
 
 
@@ -130,20 +128,29 @@
 
   <div class="at">
     <span id="article_time">Reading time: 0 分
-    22 秒</span>
+    49 秒</span>
   </div>
 
 
 
     
     <p>本サービスで可視化している災害をカレンダー形式で掲載しています。</p>
-<p>2024年09月20日 <a href="../tags/能登半島豪雨">能登半島豪雨</a></p>
-<p>2024年01月01日 <a href="../tags/能登半島地震">能登半島地震</a></p>
-<p>2024年07月23日 <a href="../tags/東北地方の豪雨">令和6年7月東北地方の豪雨</a></p>
-<p>2022年08月03日 <a href="../tags/令和4年8月の大雨等による災害">令和4年8月の大雨等による災害</a></p>
-<p>2011年03月11日 <a href="../tags/東日本大震災/">東日本大震災</a></p>
-<p>1997年01月17日 <a href="../tags/阪神淡路大震災/">阪神淡路大震災</a></p>
-<br>
+<p>・2024年09月20日 <a href="../tags/能登半島豪雨/">能登半島豪雨</a></p>
+<p>・2024年01月01日 <a href="../tags/能登半島地震/">能登半島地震</a></p>
+<p>・2024年07月23日 <a href="../tags/東北地方の豪雨/">令和6年7月東北地方の豪雨</a></p>
+<p>・2022年08月03日 <a href="../tags/令和4年8月の大雨等による災害/">令和4年8月の大雨等による災害</a></p>
+<p>・2022年01月15日 <a href="../tags/トンガ火山噴火に伴う潮位変化/">トンガ火山噴火に伴う潮位変化</a></p>
+<p>・2021年08月11日 <a href="../tags/令和3年8月の大雨/">令和3年8月の大雨</a></p>
+<p>・2021年07月03日 <a href="../tags/熱海市土砂災害">熱海市土砂災害</a></p>
+<p>・2020年07月03日 <a href="../tags/九州豪雨">九州豪雨</a></p>
+<p>・2018年06月28日 <a href="../tags/西日本豪雨">西日本豪雨</a></p>
+<p>・2016年04月14日 <a href="../tags/熊本地震">熊本地震</a></p>
+<p>・2011年03月11日 <a href="../tags/東日本大震災/">東日本大震災</a></p>
+<p>・2008年06月14日 <a href="../tags/岩手宮城内陸地震">岩手・宮城内陸地震</a></p>
+<p>・2004年10月23日 <a href="../tags/新潟県中越地震">新潟県中越地震</a></p>
+<p>・2000年09月12日 <a href="../tags/東海豪雨">東海豪雨</a></p>
+<p>・1997年01月17日 <a href="../tags/阪神淡路大震災/">阪神淡路大震災</a></p>
+
 
 
 
