--- a/bbias/index.html
+++ b/bbias/index.html
@@ -21,11 +21,11 @@
 
 
 
-<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/bbias.png" />
+<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/bbias.jpg" />
 
 
 
-<meta property="og:image" content="https://dpnote.netlify.app/images/post/bbias.png">
+<meta property="og:image" content="https://dpnote.netlify.app/images/post/bbias.jpg">
 
 
 <meta property="og:url" content="https://dpnote.netlify.app/bbias/" />
@@ -125,7 +125,7 @@
 
 
     
-    <img src="https://dpnote.netlify.app/images/post/bbias.png" class="image_featured" alt="防災における人の心理バイアスを図解にて可視化">
+    <img src="https://dpnote.netlify.app/images/post/bbias.jpg" class="image_featured" alt="防災における人の心理バイアスを図解にて可視化">
     
     <p>防災における人の心理バイアスを図解にて可視化しました。</p>
 <h2 class="heading1">つぶやき</h2>
