--- a/refugemap/index.html
+++ b/refugemap/index.html
@@ -119,7 +119,7 @@
 
   <div class="at">
     <span id="article_time">Reading time: 0 分
-    5 秒</span>
+    21 秒</span>
   </div>
 
 
@@ -131,8 +131,11 @@
 <h2 class="heading1">つぶやき</h2>
 <div class="balloon">
   <p>
+<p>日本全国で10万箇所以上ある、指定緊急避難場所・指定避難所をマップに可視化しました。GPS機能も付いているので、ご自身の近くの避難場所などを調べてみましょう！</p>
   </p>
 </div>
+<h2 class="heading1">参考文献</h2>
+・指定緊急避難場所・指定避難所データ、国土地理院
 
 
 
