--- a/krader/index.html
+++ b/krader/index.html
@@ -12,7 +12,7 @@
 <meta property="og:locale" content="ja" />
 
 <meta property="og:type" content="article">
-<meta name="description" content="気象庁の雨雲レーダーの取得方法が分かったので、MAPに載せてみました！">
+<meta name="description" content="気象庁の雨雲レーダーをマップに可視化しました！">
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:creator" content="">
 <meta name="twitter:title" content="雨雲レーダー" />
@@ -30,7 +30,7 @@
 
 <meta property="og:url" content="https://dpnote.netlify.app/krader/" />
 <meta property="og:title" content="雨雲レーダー" />
-<meta property="og:description" content="気象庁の雨雲レーダーの取得方法が分かったので、MAPに載せてみました！" />
+<meta property="og:description" content="気象庁の雨雲レーダーをマップに可視化しました！" />
 
 
 
@@ -119,14 +119,14 @@
 
   <div class="at">
     <span id="article_time">Reading time: 0 分
-    16 秒</span>
+    15 秒</span>
   </div>
 
 
 
     
-    <p>気象庁の雨雲レーダーの取得方法が分かったので、MAPに載せてみました！</p>
-<iframe src ="../../simulation/krader.html" width="100%" height="500px" frameborder="no" scrolling="no"></iframe>
+    <p>気象庁の雨雲レーダーをマップに可視化しました！</p>
+<iframe src ="../../simulation/krader.html" width="100%" height="550px" frameborder="no" scrolling="no"></iframe>
 <h2 class="heading1">つぶやき</h2>
 <div class="balloon">
   <p>
