--- a/atami3d/index.html
+++ b/atami3d/index.html
@@ -119,7 +119,7 @@
 
   <div class="at">
     <span id="article_time">Reading time: 0 分
-    12 秒</span>
+    37 秒</span>
   </div>
 
 
@@ -128,6 +128,12 @@
     <p>熱海市土砂災害を3Dにて可視化しました。</p>
 <iframe src ="../../simulation/atami.html" width="100%" height="550px" frameborder="no" scrolling="no"></iframe>
 <a href="../../simulation/atami.html" target="_blank" class="linka">全画面で見る</a>
+<h2 class="heading1">災害の概要</h2>
+梅雨前線による大雨に伴い、2021年7月3日10時30分頃に静岡県熱海市伊豆山の逢初川で土石流が発生した。
+<p>逢初川の上流部 標高約390m地点で発生した崩壊が土石流化し、下流で甚大な被害が発生した。</p>
+<p>熱海雨量観測所における降り始めからの総雨量は400ｍｍ以上を記録した。</p>
+<h2 class="heading1">参考文献</h2>
+・静岡県熱海市伊豆山で発生した土石流災害、国土交通省
 <h2 class="heading1">オープンデータ</h2>
 <p>以下のデータを加工・編集して作成しました。</p>
 <div class="link_div">
