--- a/simulation/krader.html
+++ b/simulation/krader.html
@@ -14,8 +14,18 @@
 	<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/krader.png" />
 	<meta name="author" content="仁志">
 	<meta name="keywords" content="防災,災害対策,雨雲レーダー,降水ナウキャスト">
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
+	<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css">
+    <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+		integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"
+		integrity="sha512-GWzVrcGlo0TxTRvz9ttioyYJ+Wwk9Ck0G81D+eO63BaqHaJ3YZX9wuqjwgfcV/MrB2PhaVX9DkYVhbFpStnqpQ=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 	<script type='module'>
 		onload = async () => {
@@ -58,6 +68,13 @@
 			L.control.zoom({
 				position: 'topright'
 			}).addTo(map);
+
+
+			let reload = () =>{
+				location.href = "./krader.html";
+			}
+
+			let reload_button = L.easyButton('fa-arrow-rotate-left', function () { reload(); }, { position: 'topright' }).addTo(map);
 
 		}
 	</script>
