--- a/simulation/krader.html
+++ b/simulation/krader.html
@@ -4,12 +4,12 @@
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 	<meta charset='UTF-8' name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'>
 	<meta name="description" content='気象庁の雨雲レーダーの情報を取得しました。'>
-	<meta property="og:title" content="気象庁の雨雲レーダー" />
+	<meta property="og:title" content="雨雲レーダー" />
 	<meta property="og:type" content="website" />
 	<meta property="og:image" content="https://dpnote.netlify.app/images/post/krader.png" />
 	<meta property="og:description" content="気象庁の雨雲レーダーの情報を取得しました。" />
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="気象庁の雨雲レーダー" />
+	<meta name="twitter:title" content="雨雲レーダー" />
 	<meta name="twitter:description" content='気象庁の雨雲レーダーの情報を取得しました。' />
 	<meta name="twitter:image" content="https://dpnote.netlify.app/images/post/krader.png" />
 	<meta name="author" content="仁志">
@@ -112,7 +112,7 @@
 		}
 	</style>
 
-	<title>気象庁の雨雲レーダーの情報を取得しました</title>
+	<title>雨雲レーダー</title>
 
 
 </head>
