--- a/simulation/bsmap/index.html
+++ b/simulation/bsmap/index.html
@@ -363,7 +363,7 @@
             layers: [
                 new deck.ScatterplotLayer({
                     id: 'hinanbasyo',
-                    data: './refugedata/hinanbasyo.json',
+                    data: 'https://raw.githubusercontent.com/linkevery2s/eye/refs/heads/main/practice/refugedata/hinanbasyo.json',
                     pickable: true,
                     opacity: 0.5,
                     stroked: true,
@@ -381,7 +381,7 @@
 
                 new deck.ScatterplotLayer({
                     id: 'hinanjo',
-                    data: './refugedata/hinanjo.json',
+                    data: 'https://raw.githubusercontent.com/linkevery2s/eye/refs/heads/main/practice/refugedata/hinanjo.json',
                     pickable: true,
                     opacity: 0.5,
                     stroked: true,
